--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,7 +13,6 @@ body {
   margin:50px 55px;
 }
 .main-center{
-  margin-top: 30px;
   margin: 0 auto;
   max-width: 330px;
   padding-top: 10px;
@@ -104,7 +103,7 @@ h1 {
 .list-wrapper {
 	width: 50%;
 	background-color: cyan;
-	margin-top: 10%;
+	margin-top: 5%;
 }
 .task_btn {
 	font-size: 1.5rem;
@@ -119,6 +118,7 @@ h1 {
     padding: 2px;
     background: white;
     border-radius: 10px;
+    margin-left: 15px;
 }
 .list {
 	background-color: white;
@@ -127,15 +127,25 @@ h1 {
 	font-size: 2rem;
     color: cyan;
 }
-tr {
-  background-color: #dddddd;
+tr:nth-child(odd) {
+  background-color: #12DECF;
 }
-/*
-#read .container{
-	background: #e83e8c;
-	width: 50%;
-    min-height: 50%;
-    height: 80vh;
-    border-radius: 15px;
+tr:nth-child(even) {
+  background-color: #12DE9A;
 }
-*/
+.read {
+	background: #03C68E;
+	font-family: 'Coiny', cursive;
+}
+h3 {
+	font-size: 3rem;
+    color: #FC3E75;
+    margin-left: 40%;
+}
+#logout {
+	color: #7132AD !important;
+    font-size: 1.5rem !important;
+}
+td {
+	padding-left: 10px;
+}
