--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,13 @@
 body {
 	font-family: 'Raleway', sans-serif;
 }
+.error_class {
+    color: #fff;
+    font-size: 1.5rem;
+    margin-top: 2%;
+    text-align: center;
+    font-weight: bolder;
+}
 /*register*/
 .register{
   height: 100%;
@@ -45,8 +52,8 @@ label{
 #register-button {
     width:60%;
     border: 1px solid #ccc;
-    margin-top: 28px;
-    margin-left: 35px;
+    margin-top: 10%;
+    margin-left: 20%;
     padding: 6px 12px;
     color: #666;
     border-radius: 3px 3px;  
