--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -91,8 +91,14 @@ label{
 .card {
 	min-width: 40%;
 }
-h1 {
+h4 {
 	text-align: center;
+    border: 1px solid #ced4da;
+    border-radius: 30px;
+    background-color: white;
+    padding: 2px;
+    margin-top: 5px;
+    width: 50%;
 }
 .login-wrapper {
 	background-color: #41DF9F;
